examples/test/testpolicy13416.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13416
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key29: value31
      key46: value49
      key40: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value22
          key31: value11
      podSelector:
        matchLabels:
          key5: value48
          key42: value16
